# dz-nixos

./: .gitignore  setConfig.sh  shell.nix
config/: configuration.nix  flake.nix.esh  userChrome.css
config/domain/bash/: bashrcExtra  initExtra.sh
config/domain/fastfetch/: config.jsonc
config/domain/firefox/: userChrome.css
config/domain/fish/: interactiveShellInit.fish
config/domain/nvim/: config.nix  init.vim
config/domain/nvim/lua/dz/: init.lua  markdown.lua  tabline.lua
config/domain/polybar/: config.ini
config/domain/xmolib/src/Xmolib/Entry/: Xmonad.hs
config/domain/xmonad/: hie-bios.sh  hooks  xmonad.hs
config/domain/xmonad/xmoctrl/: flake.nix  main.hs
config/domain/xmonad/xmoctrl/xmolib/src/Xmolib/Entry/: Xmoctrl.hs
config/domain/xonsh/rc.d/: init.py  init.xsh
config/domain/xonsh/rc.d/powerbar/: __init__.py
config/nvim/lua/dz/: init.lua  markdown.lua
config/nvim/lua/dz/wk/mapping/: leader.lua
config/xmonad/: hooks
config/xmonad/xmoctrl/: LICENSE  README.md  flake.nix  justfile  xmoctrl.cabal
config/xmonad/xmoctrl/nix/modules/flake-parts/: devshell.nix  haskell.nix
config/xmonad/xmoctrl/src/: Main.hs
config/xmonad/xmoctrl/xmolib/: xmolib.cabal
config/xmonad/xmoctrl/xmolib/nix/modules/flake-parts/: haskell.nix
config/xmonad/xmoctrl/xmolib/src/Options/Applicative/: BashCompletion.hs  Builder.hs  Types.hs
config/xmonad/xmoctrl/xmolib/src/Options/Applicative/Builder/: Completer.hs
config/xmonad/xmoctrl/xmolib/src/Xmolib/Entry/: Xmoctrl.hs  Xmonad.hs
flakes/dz-xonsh/: flake.nix  pyproject.toml
flakes/dz-xonsh/dz_xonsh/: xonsh.py
nixos/: .configuration.nix.swp  bashrcExtra  configuration.nix  flake.nix.esh
nixos/nvim/: config.nix  init.lua  init.vim  neovide.nix
nixos/nvim/lua/dz/: init.lua
nixos/nvim/lua/dz/wk/: init.lua
nixos/nvim/lua/dz/wk/mapping/: leader.lua
nixos/polybar/: cava.sh  config.ini
nixos/xmonad/: hie.yaml  xmonad.hs
nixos/xmonad/xmoctrl/xmolib/: xmolib.cabal
nixos/xmonad/xmoctrl/xmolib/src/Options/: Applicative.hs
nixos/xmonad/xmoctrl/xmolib/src/Options/Applicative/: Common.hs  Extra.hs
nixos/xmonad/xmoctrl/xmolib/src/Options/Applicative/Builder/: Internal.hs
nixos/xmonad/xmoctrl/xmolib/src/Options/Applicative/Help/: Core.hs
nixos/xmonad/xmoctrl/xmolib/tests/: test.hs
